--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,37 +159,6 @@ ul.errorlist {
     overflow: hidden;
 }
 
-#categories {
-    width: 220px;
-    padding: 30px 20px 0 0;
-    margin-top: 93px;
-    float: left;
-}
-
-#categories ul {
-    margin: 0;
-    padding: 0;
-}
-
-#categories ul li {
-    margin: 0;
-    list-style: none;
-    padding: 10px 14px;
-}
-
-#categories ul li a {
-    display: block;
-}
-
-#categories ul li.selected {
-    background: #5993bb;
-    border-radius: 4px;
-}
-
-#categories ul li.selected a {
-    color: #fff;
-}
-
 #main {
     float: left;
     width: 96%;
@@ -248,7 +217,7 @@ ul.errorlist {
 }
 
 .product-detail img {
-    width: 40%;
+    width: 100%;
     float: left;
     padding: 0 20px 20px 0;
 }
@@ -301,76 +270,32 @@ ul.errorlist {
     color: #dc1616;
 }
 
-.languages {
-    float: right;
-    padding-top: 4px;
-    font-size: 14px;
+.scroll-top-arrow {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+    display: inline-block;
+    background-color: #5993bb;
+    color: white;
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 20px;
+    transition: opacity 0.3s ease;
 }
 
-.languages ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    float: left;
+.scroll-top-arrow:hover {
+    background-color: #77b6e2;
+    color: white;
+    text-decoration: none;
 }
 
-.languages ul li {
-    float: left;
-    margin: 0 0 0 10px;
-    font-size: 14px;
+.scroll-top-arrow.d-none {
+    display: none;
 }
 
-.languages p {
-    float: left;
-    margin: 0;
-}
-
-.recommendations {
-    clear: both;
-}
-
-.recommendations div {
-    float: left;
-}
-
-.recommendations img {
-    width: 200px
-}
-
-.recommendations p {
-    clear: both;
-}
-
-.recommendations.cart {
-    width: 60%;
-    float: left;
-    overflow: auto;
-}
-
-.recommendations.cart h3 {
-    margin-top: 0;
-}
-
-.recommendations.cart .item {
-    margin-right: 10px;
-}
-
-.recommendations.cart img {
-    width: 120px;
-}
-
-
-/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
-
-.arrow-up {
-    width: 0;
-    height: 0;
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent;
-    border-bottom: 10px solid black;
-    position: absolute;
-    top: -10px;
-    right: 36px;
+.scroll-top-arrow i {
+    color: white;
 }
 
 
