--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,25 +1,31 @@
-{% extends "account/base_manage.html" %}
+{% extends "base.html" %}
 {% load allauth i18n %}
 {% block head_title %}
     {% trans "Sign Out" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Out" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Are you sure you want to sign out?' %}
-    {% endelement %}
-    {% url 'account_logout' as action_url %}
-    {% element form method="post" action=action_url no_visible_fields=True %}
-        {% slot body %}
-            {% csrf_token %}
-            {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Sign Out' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <h2 class="mb-4">{% trans "Log Out" %}</h2>
+            <p class="lead">
+            {% trans "Are you sure you want to log out?" %}
+            </p>
+
+            <form method="post" action="{% url 'account_logout' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-danger mt-3">
+                {% trans "Log Out" %}
+                </button>
+            </form>
+
+            <p class="mt-3">
+                <a href="{% url 'home' %}" class="text-muted">
+                {% trans "Cancel and return to homepage" %}
+                </a>
+            </p>
+        </div>
+    </div>
+</div>
 {% endblock content %}
