--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -18,9 +18,9 @@
                 <label for="promo_code" class="form-label">Promo Code</label>
                 <input type="text" class="form-control" id="promo_code" name="promo_code" placeholder="Enter promo code">
               </div>
-              <button type="submit" class="btn btn-primary btn-lg w-100">Proceed to Secure Payment</button>
+              <button type="submit" class="btn btn-primary w-100">Proceed to Secure Payment</button>
           </form>
-          <a href="{% url 'bag:view_bag' %}" class="btn btn-secondary btn-lg mt-4">
+          <a href="{% url 'bag:view_bag' %}" class="btn btn-secondary mt-4">
             <span class="icon"><i class="fas fa-chevron-left"></i></span><span class="btn-text">Back to Bag</span>
           </a>
         </div>
