--- a/shop/templates/shop/product/includes/stock_qty_script.html
+++ b/shop/templates/shop/product/includes/stock_qty_script.html
@@ -37,7 +37,7 @@ document.addEventListener('DOMContentLoaded', function() {
             decrementBtn.disabled = (qtyInput.value <= 1);
             incrementBtn.disabled = (qtyInput.value >= stock);
             qty.className = `col-12 d-block`;
-            addToBag.className = `btn btn-primary mt-2`;
+            addToBag.className = `btn btn-primary mt-2 w-100`;
             backInStock.className = `d-none mt-4`;
             qtyInput.value = 1; // Only reset on variant change
         } else { // Disable and remove button if stock is less than 1
@@ -48,7 +48,7 @@ document.addEventListener('DOMContentLoaded', function() {
             stockMessage.className = `text-danger`;
             addToBag.disabled = true;
             qty.className = `col-12 d-none`;
-            addToBag.className = `btn btn-primary mt-2 d-none`;
+            addToBag.className = `btn btn-primary mt-2 w-100 d-none`;
             backInStock.className = `mt-4`;
         }
     }
