--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,10 +8,17 @@
 <div>
     <img id="index-logo" src="{% static 'img/logo.png' %}" alt="Little'n logo">
 </div>
-<div class="col index-header">
-    <h1>Welcome to Little'n, the genuin option from north England crossed with Swedish design and quality.</h1>
+<div class="index-header">
+    <h2>Welcome to Little'n, the genuin option from north England crossed with Swedish design and quality.</h2>
 </div>
-<div id="index-image" class="col index-img">
-    
+<div id="index-image" class="index-img">
+    <div id="index-image-text">
+        <h3>NEW SUMMER COLLECTION IN STOCK</h3>
+    </div>
+    <div id="index-image-btn">
+        <a href="{% url 'shop:product_list' %}">
+            <span class="btn-text">SHOP NOW</span>
+        </a>
+    </div>
 </div>
 {% endblock %}
