--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,18 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&family=Macondo&family=Oswald:wght@200..700&family=Quicksand:wght@300..700&display=swap');
 
-/* Global var */
+/* CSS Variables */
 
 :root {
     --primary-font: "Quicksand", sans-serif;
     --secondary-font: "Open Sans", sans-serif;
     --primary-color-dark: #008080;
     --primary-color-bright: #FFFFF0;
+    --primary-color-grey: #708090;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: var(--secondary-font)
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Quicksand', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
 }
 
 h1,
@@ -21,12 +34,12 @@ h3,
 h4,
 h5,
 h6 {
-    font-family:
+    font-family: var(--primary-font)
 }
 
 a {
     text-decoration: none;
-    color: #5993bb;
+    color: var(--primary-color-dark);
 }
 
 a:hover {
@@ -36,7 +49,7 @@ a:hover {
 a.button,
 input[type="submit"] {
     color: #fff;
-    background: #5993bb;
+    background: var(--primary-color-dark);
     border-radius: 4px;
     padding: 10px 20px;
     font-size: 14px;
@@ -146,6 +159,10 @@ ul.errorlist {
     overflow: auto;
 }
 
+#banner {
+    background-color: var(--primary-color-dark);
+}
+
 #banner p {
     margin-bottom: 0;
 }
@@ -197,11 +214,67 @@ ul.errorlist {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
     width: 100%;
     height: auto;
     aspect-ratio: 16 / 9;
     margin: 0;
     padding-top: 0;
+}
+
+#index-image-text {
+    color: var(--primary-color-bright);
+    position: absolute;
+    left: 5%;
+    top: 10%;
+}
+
+#index-image-btn {
+    background-color: var(--primary-color-bright);
+    position: absolute;
+    left: 5%;
+    top: 80%;
+    display: inline-block;
+    padding: 10px 24px;
+    font-size: 16px;
+    color: #fff;
+    border: none;
+    border-radius: 50px;
+    /* Makes it rounded */
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+#index-image-btn:hover {
+    background-color: white;
+}
+
+#index-image-btn btn-text {
+    color: var(--primary-color-dark);
+}
+
+#footer {
+    background-color: var(--primary-color-grey);
+    color: white;
+}
+
+#footer1 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+#footer2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+#footer3 {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+#footer a {
+    color: white;
 }
 
 .bag-img {
@@ -228,10 +301,10 @@ ul.errorlist {
     color: var(--primary-color-bright);
     margin-top: 24px;
     margin-bottom: 0;
-    padding-bottom: 0;
+    padding: 0.5rem;
 }
 
-.index-header h1 {
+.index-header h2 {
     margin-bottom: 0;
 }
 
@@ -314,7 +387,7 @@ ul.errorlist {
     right: 30px;
     z-index: 999;
     display: inline-block;
-    background-color: #5993bb;
+    background-color: var(--primary-color-dark);
     color: white;
     padding: 10px 14px;
     border-radius: 50%;
