--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <body>
     <header class="container-fluid fixed-top">
         <div id="banner" class="row text-center">
-            <div class="col bg-black text-white">
+            <div class="col text-white">
                 <p><i class="fa-solid fa-check"></i> Free Delivery over £{{ free_delivery_threshold }}   <i class="fa-solid fa-check"></i> Fast   <i class="fa-solid fa-check"></i> Convenient<p>
             </div>
         </div>
@@ -115,34 +115,39 @@
             </div>
         </nav>
     </header>
-
-    {% if messages %}
-    <div aria-live="polite" aria-atomic="true" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;">
-        {% for message in messages %}
-        <div class="toast align-items-center text-white bg-success border-0 show" role="alert" id="bag-toast">
-            <div class="d-flex">
-                <div class="toast-body">
-                    {{ message }}
+    <main>
+        {% if messages %}
+        <div aria-live="polite" aria-atomic="true" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;">
+            {% for message in messages %}
+            <div class="toast align-items-center text-white bg-success border-0 show" role="alert" id="bag-toast">
+                <div class="d-flex">
+                    <div class="toast-body">
+                        {{ message }}
+                    </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
-            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-    {% endif %}
+        {% endif %}
 
-    <div class="top-m">
-        {% block page_header %}
-        {% endblock %}
-        {% block content %}
-        {% endblock %}
-    </div>
-    
-    <a href="#" id="scrollToTopBtn" class="scroll-top-arrow d-none">
-        <i class="fas fa-arrow-up"></i>
-    </a>
-    <footer>
-
+        <div class="top-m">
+            {% block page_header %}
+            {% endblock %}
+            {% block content %}
+            {% endblock %}
+        </div>
+        
+        <a href="#" id="scrollToTopBtn" class="scroll-top-arrow d-none">
+            <i class="fas fa-arrow-up"></i>
+        </a>
+    </main>
+    <footer id="footer" class="text-center mt-4">
+        <p id="footer1">&copy; 2025 Little’n – All rights reserved</p>
+        <p id="footer2">Contact us on email: <a href="mailto:littlen.shopping@gmail.com">littlen.shopping@gmail.com</a></p>
+        <p id="footer3">Follow us on Instagram:
+            <a href="https://www.instagram.com/littlen_co/" target="_blank" rel="noopener" aria-label="Visit our Instagram (opens in new tab)"><i class="fa-brands fa-instagram social-icon"></i></a>
+        </p>
     </footer>
     {% block postloadjs %}
     <script>
