added favicon and corrected logo to fit on small screens

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-    <img id="index-logo" src="{% static 'img/logo.png' %}" alt="Little'n logo">
+    <img id="index-logo" class="img-fluid" src="{% static 'img/logo.png' %}" alt="Little'n logo">
 </div>
 <div class="index-header">
     <h2>Welcome to Little'n, the genuin option from north England crossed with Swedish design and quality.</h2>
