--- a/static/css/base.css
+++ b/static/css/base.css
@@ -207,6 +207,7 @@ ul.errorlist {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    object-fit: contain;
 }
 
 #index-image {
