--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -64,8 +64,9 @@
       {% endfor %}
     </tbody>
   </table>
-  <p class="text-end">Delivery: <strong>£{{ order.delivery_cost }}</strong></p>
-  <h5 class="text-end">Total: <strong>£{{ order.grand_total }}</strong></h5>
+  <p class="text-end">Delivery: <strong>£{{ order.delivery_cost|floatformat:2 }}</strong></p>
+  {% if order.discount %}<p class="text-end">Discount: <strong>£{{ order.discount|floatformat:2 }}</strong></p>{% endif %}
+  <h5 class="text-end">Total: <strong>£{{ order.grand_total|floatformat:2 }}</strong></h5>
 
   <a href="{% url 'orders:order_list' %}" class="btn btn-secondary mt-3">Back to Orders</a>
 </div>
