--- a/templates/base.html
+++ b/templates/base.html
@@ -98,9 +98,9 @@
                                 <i class="fas fa-shopping-bag fa-lg"></i>
                                 <p class="my-0">
                                     {% if bag_grand_total %}
-                                        ${{ bag_grand_total|floatformat:2 }}
+                                        £{{ bag_grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                        £0.00
                                     {% endif %}
                                 </p>
                             </div>
