added custom 403 404 500 error pages, update README

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -421,7 +421,7 @@ ul.errorlist {
 }
 
 .scroll-top-arrow:hover {
-    background-color: #77b6e2;
+    background-color: #7ac2a6;
     color: white;
     text-decoration: none;
 }
