--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,11 @@
     {% endblock %}
     <!-- Bootstrap CSS Favicon-->
     {% block corecss %}
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
-        <link rel="manifest" href="/static/img/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
+        <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+        <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
