--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
         </a>
     </main>
     <footer id="footer" class="text-center mt-4">
-        <p id="footer1">&copy; 2025 Little’n – All rights reserved</p>
+        <p id="footer1">&copy; 2025 Little'n - All rights reserved</p>
         <p id="footer2">Contact us on email: <a href="mailto:littlen.shopping@gmail.com">littlen.shopping@gmail.com</a></p>
         <p id="footer3">Follow us on Instagram:
             <a href="https://www.instagram.com/littlen_co/" target="_blank" rel="noopener" aria-label="Visit our Instagram (opens in new tab)"><i class="fa-brands fa-instagram social-icon"></i></a>
