--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-6">
       <h5>Order Info</h5>
-      <p>
+      <div>
         <strong>Order Date:</strong> {{ order.created|date:"SHORT_DATETIME_FORMAT" }}<br>
         <strong>Delivered:</strong>
         {% if order.delivered %}
@@ -33,7 +33,7 @@
             <button type="submit" class="btn btn-success btn-sm">Mark as Delivered</button>
           </form>
         {% endif %}
-      </p>
+        </div>
     </div>
   </div>
 
