--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -11,10 +11,10 @@
                 value="{{ user_query|default:'' }}">
         </div>
         <div class="col-md-2">
-            <input type="date" name="from" class="form-control" value="{{ date_from }}">
+            <input type="date" name="from" class="form-control" value="{{ date_from|date:'Y-m-d' }}">
         </div>
         <div class="col-md-2">
-            <input type="date" name="to" class="form-control" value="{{ date_to }}">
+            <input type="date" name="to" class="form-control" value="{{ date_to|date:'Y-m-d' }}">
         </div>
         <div class="col-md-2">
             <select name="delivered" class="form-select">
@@ -27,7 +27,9 @@
             <button type="submit" class="btn btn-primary w-100">Apply Filter</button>
         </div>
     </form>
-
+    <a href="{% url 'orders:export_orders_csv' %}" class="btn btn-sm btn-outline-dark">
+        <i class="fa fa-download"></i> Export CSV
+    </a>
     <!-- Order list -->
     <table class="table table-striped">
         <thead>
@@ -63,9 +65,6 @@
                 <td colspan="6">No orders found.</td>
             </tr>
             {% endfor %}
-            <a href="{% url 'orders:export_orders_csv' %}" class="btn btn-sm btn-outline-dark">
-                <i class="fa fa-download"></i> Export CSV
-            </a>
         </tbody>
     </table>
 </div>
