update readme, minor orderview error handling

--- a/orders/templates/orders/processing.html
+++ b/orders/templates/orders/processing.html
@@ -1,3 +1,7 @@
 {% extends "base.html" %}
 <h2>Your order is being processed...</h2>
 <p>If this page doesn't refresh automatically, please refresh manually in a few seconds.</p>
+
+<script>
+  setTimeout(() => window.location.reload(), 5000); // reload after 5 seconds
+</script>
