--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
                     </ul>
                     <form class="d-flex" role="search" method="GET" action="{% url 'shop:product_search' %}">
                         <input class="form-control me-2" type="search" name="search" placeholder="Search products" aria-label="Search products" required>
-                        <button class="btn btn-outline-success" type="submit">
+                        <button class="btn btn-outline-success" type="submit" aria-label="Search button">
                             <span class="icon">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </span>
@@ -143,7 +143,7 @@
             {% endblock %}
         </div>
         
-        <a href="#" id="scrollToTopBtn" class="scroll-top-arrow d-none">
+        <a href="#" id="scrollToTopBtn" class="scroll-top-arrow d-none" aria-label="Scroll to top">
             <i class="fas fa-arrow-up"></i>
         </a>
     </main>
