--- a/orders/templates/orders/processing.html
+++ b/orders/templates/orders/processing.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 <h2>Your order is being processed...</h2>
 <p>If this page doesn't refresh automatically, please refresh manually in a few seconds.</p>
 
